build(deps): update dependencies (#1656)
This update brings dependency updates.